--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div>
                 <li>
                     <img src="resources/images/carmen.jpeg" alt="tomato-carmen">
-                    <h3>Carmem or Long life</h3>
+                    <h3>Carmen/Long life</h3>
                     <p>It gets its name because it is more resistant on the</br> market shelf</p>
                     <p>Slightly acidic flavor with a firmer and meatier texture</p>
                     <p>Recommended for salads</p>
